src/app/widgets/JobStatus/components/IdleInfo.styl
/*
 *     This file is part of gSender.
 *
 *     gSender is free software: you can redistribute it and/or modify
 *     it under the terms of the GNU General Public License as published by
 *     the Free Software Foundation, either version 3 of the License, or
 *     (at your option) any later version.
 *
 *     gSender is distributed in the hope that it will be useful,
 *     but WITHOUT ANY WARRANTY; without even the implied warranty of
 *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *     GNU General Public License for more details.
 *
 *     You should have received a copy of the GNU General Public License
 *     along with gSender.  If not, see <https://www.gnu.org/licenses/>.
 */

.disconnected-info {
    width: 100%;
    height: 100%;
    display: flex;
    flex-grow: 1;
    align-items: center;
    flex-wrap: wrap;
    justify-content: space-evenly;
    gap: 1rem;
    background: #e5e7eb;
}

.idle-info {
    width: 100%;
    display: flex;
    flex-direction: column;
    height: 100%;
}

.idle-info-row {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    width: 100%;
    overflow-wrap: break-word;
    background: #e5e7eb;
}

.additional-info {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    justify-content: space-between;
    margin-top: 1rem;
}

.axis-letter {
    font-weight: bold;
    font-size: 1.75rem;
}

.file-name {
    color: #3e85c7;
    font-size: 1.1rem;
    height: 1.9rem;
}

.file-stat {
    display: flex;
    flex-direction: column;
    border-left: solid 3px #d1d5db;
    width: 20%;
    padding-left: 1em;
    align-items: center;
    flex-grow: 1;
    box-sizing: border-box;

    &:first-child {
        border: none;
    }
}

.file-stat-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    flex-grow: 1;
}

.file-stat-content {
    font-size: .9em;
    font-weight: bold;
    text-align: center;
}

.file-stat-label {
    margin-top: .5em;
    color: #6b7280;
    text-align: center;
}

